# nks_ds_slack

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
nks_ds_slackbot/: main.py  settings.py  utils.py
