[tool.poetry]
name = "nks-ds-slackbot"
version = "0.1.0"
description = "Slack bot for NKS Digital Assistent"
authors = ["Jørgen Nordmoen <jorgen@nordmoen.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
nks-slack-bot = "nks_ds_slackbot.main:main"
bob = "nks_ds_slackbot.main:main"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"  # Brukes for GET/POST mot NKS-DS-API
pydantic-settings = "^2.2.1"  # Brukes for miljøvariabler
slack-bolt = "^1.18.1"  # Brukes for å snakke med Slack

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.7"

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
